--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,13 +1,13 @@
 :root {
   scrollbar-gutter: stable;
   --padding: 0.5rem;
-  --background: #e0e0e0;
+  --background-color: #e0e0e0;
+  --text-color: #000000;
   --button__color: #e0e0e0;
   --border: 1px solid rgb(153, 153, 153);
   --border-radius: 5px;
   --img-border: 5px solid rgba(211, 211, 211, 0.233);
   --img-border: 5px solid grey;
-  --text-color: #000000;
   --text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
 
   /* Book colors */
@@ -29,7 +29,7 @@
 }
 
 [data-theme="dark"] {
-  --background: #18191F;
+  --background-color: #18191F;
   --text-color: #ffffff;
   --button__color: #18191F;
   
