--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -9,6 +9,8 @@
   --img-border: 5px solid rgba(211, 211, 211, 0.233);
   --img-border: 5px solid grey;
   --text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  --p-formatting: clamp(1rem, 3vw, 1.125rem);
+  --p-line-height: 1.5;
 
   /* Book colors */
   --beginner: #fcc418;
