--- a/css/variables.css
+++ b/css/variables.css
@@ -11,6 +11,7 @@
   --text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   --p-size: clamp(1rem, 3vw, 1.125rem);
   --p-line-height: 1.5;
+  --icon-color: red;
 
   /* Book colors */
   --beginner: #fcc418;
