--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,7 @@
-.home__button__container {
+header {
+  border: var(--border);
+  border-radius: var(--border-radius);
+  padding: var(--padding);
   display: flex;
   justify-content: space-between;
 }
@@ -13,10 +16,11 @@
 
 .home__logo__wrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.625rem;
-  margin-bottom: 35px;
+  gap: 1.4rem;
+  margin-bottom: 20px;
 }
 
 .home__logo__container {
@@ -34,12 +38,12 @@
   }
   
   .daily-basis {
-    font-size: 4rem;
+    font-size: 3.8rem;
 
   }
 
   .english-course {
-    font-size: 2.850rem;
+    font-size: 2.720rem;
     position: relative;
     bottom: 12.8px;
   }
