--- a/css/imports.css
+++ b/css/imports.css
@@ -5,4 +5,4 @@
 @import "./theme/colors.css";
 @import "./ultilities/spacing.css";
 @import "./ultilities/text.css";
-@import "./ultilities/borders.css"
+@import "./ultilities/borders.css";
