--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -1,25 +1,30 @@
 /* anton-regular - latin */
 h1 {
-  font-size: clamp(2rem, 5vw, 2.5rem);
+  font-size: 2rem;
   line-height: 1.2;
 }
 
 h2 {
-  font-size: clamp(1.75rem, 4.5vw, 2rem);
+  font-size: 1.75rem;
   line-height: 1.2;
 }
 
 h3 {
-  font-size: clamp(1.5rem, 4vw, 1.75rem);
+  font-size: 1.5rem;
   line-height: 1.2;
 }
 
 h4 {
-  font-size: clamp(1.125rem, 3.5vw, 1.5rem);
+  font-size: 1.125rem;
   line-height: 1.2;
 }
 
-p, li, a, input, button, textarea, select {
-  font-size: clamp(1rem, 3vw, 1.125rem);
+p,
+li,
+a,
+input,
+button,
+textarea,
+select {
   line-height: 1.5;
 }
